<resources>
    <string name="app_name">Pie</string>
    <string name="add_member_title_text">Add Member</string>
    <string name="addBoardConfirmButton">Confirm</string>
    <string name="addBoardBrowseButton">Browse</string>
    <string name="addBoardBackground_picture_text">Background picture:</string>
    <string name="addBoardAssignTo">Assign to : </string>
    <string name="fake_board_name">Board1</string>
    <string name="addBoardOwner">Owner : </string>
    <string name="are_you_sure">Are you sure you want to delete </string>
    <string name="AddBoardBoardName">Board name</string>
    <string name="addBoardTitle">Add board</string>
    <string name="profile_toolbar_title">Profile</string>
    <string name="profile_hint_email">Email</string>
    <string name="profile_hint_phone_number">Phone number</string>
    <string name="profile_current_password">Current password</string>
    <string name="register_current_password">password</string>
    <string name="profile_new_password">New password</string>
    <string name="register_confirm_password">confirm password</string>
    <string name="profile_name">your name is shown here</string>
    <string name="profile_information">Information</string>
    <string name="profile_change_password">Change password</string>
    <string name="profile_confirm_button">Confirm</string>
    <string name="task_item_todo_list_name">list name</string>
    <string name="add_member_2_bottom_button">Add Member</string>
    <string name="task_item_add_task_button_text">Add Task</string>
    <string name="add_member_3_title">Add member</string>
    <string name="board_menu_add_member">Add member</string>
    <string name="add_member_3_searcch">Search for more member</string>
    <string name="add_todolist">Add Todolist</string>
    <string name="register_register_button">Register</string>
    <string name="all_tasks_done">All tasks done</string>
    <string name="login_register_button">Login</string>
    <string name="register_new_account">Register new Account</string>
    <string name="page_empty_message">You can add boards here \n to manage your Tasks.</string>
    <string name="page_empty_content_describtion">vew for no board.</string>
    <string name="anchor_menu">fake view for menu</string>
    <string name="custom_menu">3 dots for menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="delete_board">Delete Board</string>
     <string name="edit_board_title_String">Edit Board</string>
    <string name="edit_board_assign_to">Assign to : </string>
    <string name="edit_todolist_name_default_name">Todolist1</string>
    <string name="edit_todolist_name_default_owner_name">none</string>
    <string name="edit_member_owner">Owner : </string>
    <string name="editBoardBackground_picture_text">Background picture:</string>

    <string name="addTaskAssignTo">Assign to : </string>
    <string name="addTaskOwner">Owner : </string>
    <string name="AddTaskTaskName">Task name</string>
    <string name="addTaskTitle">Add Task</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="edit_todolist_name">Edit Todolist Name</string>
    <string name="todo_task_first">to do (</string>
    <string name="todo_remaining_tasks">remaining tasks</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="login_page_main_title">TodoList App</string>
    <string name="test_task_description">task description</string>
    <string name="todo_task_second">tasks)</string>
    <string name="add_todolist_title">Add To Do List</string>
    <string name="add_todo_list_hint">Todo list name</string>
    <string name="default_owner_add_to_do_list">none</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="msg_loging_in">Logging in</string>
    <string name="tiet_defualt_username">pie@test.com</string>
    <string name="tiet_default_password">Aa123456</string>
    <string name="tv_item_board_done_text">Done</string>
    <string name="assignee_error">your task should have assignee</string>
    <string name="InternetConnectionError">No Internet</string>
    <string name="msg_splash_screen_wating_text">Please wait for a second...</string>


</resources>
