<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_round_edge"
    tools:context=".features.board.ui.AddBoardDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/ll_edit_todolist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_edit_todolist_name"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/dialog_title_round_up">

                <TextView
                    android:id="@+id/tv_edit_todolist_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_add_board_margin_start"
                    android:text="@string/edit_todolist_name"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/huge_font_size"
                    android:textStyle="bold"
                    android:typeface="sans"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ib_edit_todolist_close"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/ib_edit_todolist_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/tv_add_board_margin_end"
                    android:background="@color/white_gray"
                    android:src="@drawable/ic_close_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tv_add_board_margin_start"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_edit_todolist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/et_dialog_margin_bottom"
                    android:backgroundTint="@color/warm_grey"
                    android:ems="10"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/edit"
                    android:inputType="textPersonName"
                    android:letterSpacing="0.01"
                    android:text="@string/edit_todolist_name_default_name"
                    android:textColor="@color/greyish_87"
                    android:textSize="@dimen/big_font_size"
                    android:textStyle="normal" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_edit_todolist_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/cl_dialog_margin_top"
                    android:layout_marginBottom="@dimen/cl_dialog_margin_bottom">

                    <TextView
                        android:id="@+id/tv_edit_todolist_owner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:letterSpacing="0.01"
                        android:text="@string/addBoardOwner"
                        android:textColor="@color/black_87_two"
                        android:textSize="@dimen/big_font_size"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tv_edit_todolist_owner_name"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/tv_edit_todolist_owner_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:letterSpacing="0.01"
                        android:text="@string/edit_todolist_name_default_owner_name"
                        android:textColor="@color/black_87_two"
                        android:textSize="@dimen/big_font_size"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_weight="2"
                        app:layout_constraintStart_toEndOf="@+id/tv_edit_todolist_owner"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_todolist_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_button_round_down"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:insetBottom="0dp"
                android:letterSpacing="0.01"
                android:padding="@dimen/mb_confirm_padding"
                android:text="@string/addBoardConfirmButton"
                android:textAllCaps="false"
                android:textColor="@color/almost_black"
                android:textSize="@dimen/huge_font_size"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
