<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_round_edge"
    tools:context=".features.board.ui.AddBoardDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_delete_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_delete_board_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cl_add_task_height"
                android:background="@drawable/dialog_title_round_up">

                <TextView
                    android:id="@+id/tv_delete_board_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_add_board_margin_start"
                    android:text="@string/delete_board"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/huge_font_size"
                    android:textStyle="bold"
                    android:typeface="sans"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tv_add_board_margin_start"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_delete_board_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:id="@+id/tv_delete_board_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:letterSpacing="0.01"
                        android:text="@string/are_you_sure"
                        android:textColor="@color/black_87_two"
                        android:textSize="@dimen/big_font_size"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tv_edit_todolist_owner_name"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/tv_add_board_margin_end"
                    android:layout_marginBottom="@dimen/tv_margin_bottom_cancel"
                    android:padding="10dp"
                    android:text="@string/ok_button"
                    android:textColor="@color/seafoam_blue"
                    android:textSize="@dimen/big_font_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


                <TextView
                    android:id="@+id/tv_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tv_add_board_margin_start"
                    android:layout_marginBottom="@dimen/tv_margin_bottom_cancel"
                    android:padding="10dp"
                    android:text="@string/cancel_button"
                    android:textColor="@color/seafoam_blue"
                    android:textSize="@dimen/big_font_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
