<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:src="@drawable/ic_group_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/login_page_main_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsv_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:paddingBottom="45dp"
                app:layout_anchor="@id/iv_profile_photo"
                app:layout_anchorGravity="bottom"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="47dp"
                    android:layout_marginRight="47dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="19dp"
                        android:gravity="start"
                        app:endIconDrawable="@drawable/ic_outline_edit_24dp"
                        app:endIconMode="custom"
                        app:startIconDrawable="@drawable/ic_mail"
                        app:startIconTint="@color/white"
                        app:startIconTintMode="multiply">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_login_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:drawableStart="@drawable/ic_mail"
                            android:drawablePadding="11dp"
                            android:fontFamily="sans-serif-medium"
                            android:hint="@string/profile_hint_email"
                            android:inputType="textEmailAddress"
                            android:letterSpacing="0.01"
                            android:textColor="@color/primaryText"
                            android:textSize="14sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="19dp"
                        android:gravity="start"
                        app:endIconMode="password_toggle"
                        app:startIconDrawable="@drawable/ic_key_24dp"
                        app:startIconTint="@color/white"
                        app:startIconTintMode="multiply">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:drawableStart="@drawable/ic_key_24dp"
                            android:drawablePadding="11dp"
                            android:fontFamily="sans-serif-medium"
                            android:hint="@string/register_current_password"
                            android:inputType="textPassword"
                            android:letterSpacing="0.01"
                            android:textColor="@color/primaryText"
                            android:textSize="14sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="19dp"
                        android:background="@color/colorPrimary"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:letterSpacing="0.01"
                        android:text="@string/login_register_button"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/primaryText"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_login_register_new_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/register_new_account"
                        android:textColor="@color/ugly_blue"
                        android:textSize="14sp" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>