<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".features.board.ui.SelectMemberDialogFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/dialog_round_edge">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_add_member_title"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:background="@drawable/dialog_title_round_up">

                <TextView
                    android:id="@+id/tv_add_member_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.01"
                    android:text="@string/add_member_3_title"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/huge_font_size"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ib_add_member_3_close"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/ib_add_member_3_close"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_close_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/cl_add_member_title"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_search_member"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@color/black"
                    android:theme="@style/TextInputLayoutAppearance"
                    app:boxBackgroundColor="@color/white_three"
                    app:endIconDrawable="@drawable/ic_search_black_24dp"
                    app:endIconMode="custom"
                    app:endIconTint="@color/transparent"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="12dp"
                    app:endIconTintMode="screen">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_search_member"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_member_3_searcch"
                        android:textColorHint="@color/primaryText" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_add_member_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="20dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>
        </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_select_member_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:background="@drawable/dialog_button_round_down"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:insetBottom="0dp"
        android:letterSpacing="0.01"
        android:padding="10dp"
        android:text="@string/addBoardConfirmButton"
        android:textAllCaps="false"
        android:textColor="@color/almost_black"
        android:textSize="@dimen/huge_font_size"
        android:textStyle="bold" />

</FrameLayout>
